@@ -17,8 +17,12 @@
 package academy.devonline.javamm.compiler.component.impl.util;
 
 import academy.devonline.javamm.code.fragment.SourceLine;
+import academy.devonline.javamm.compiler.component.impl.error.JavammLineSyntaxError;
 
+import java.util.Collections;
 import java.util.List;
+
+import static java.lang.String.format;
 
 /**
  * @author devonline
@@ -26,23 +30,49 @@ import java.util.List;
  */
 public final class SyntaxParseUtils {
 
+    private static final String MISSING_TEMPLATE = "Missing %s";
+
     private SyntaxParseUtils() {
     }
 
-    public static List<String> getTokensBetweenBrackets(final String openingBracket,
-                                                        final String closingBracket,
+    public static List<String> getTokensBetweenBrackets(final String firstOpeningBracket,
+                                                        final String lastClosingBracket,
                                                         final SourceLine sourceLine,
                                                         final boolean allowEmptyResult) {
         return getTokensBetweenBrackets(
-            openingBracket, closingBracket, sourceLine.getTokens(), sourceLine, allowEmptyResult
+            firstOpeningBracket, lastClosingBracket, sourceLine.getTokens(), sourceLine, allowEmptyResult
         );
     }
 
-    public static List<String> getTokensBetweenBrackets(final String openingBracket,
-                                                        final String closingBracket,
+    public static List<String> getTokensBetweenBrackets(final String firstOpeningBracket,
+                                                        final String lastClosingBracket,
                                                         final List<String> tokens,
                                                         final SourceLine sourceLine,
                                                         final boolean allowEmptyResult) {
-        return List.copyOf(tokens);
+        if (tokens.isEmpty()) {
+            throw new JavammLineSyntaxError(format(MISSING_TEMPLATE, firstOpeningBracket), sourceLine);
+        }
+        final int start = tokens.indexOf(firstOpeningBracket) + 1;
+        if (start == 0) {
+            throw new JavammLineSyntaxError(format(MISSING_TEMPLATE, firstOpeningBracket), sourceLine);
+        }
+        final int end = tokens.lastIndexOf(lastClosingBracket);
+        if (end == -1) {
+            throw new JavammLineSyntaxError(format(MISSING_TEMPLATE, lastClosingBracket), sourceLine);
+        }
+        if (start < end) {
+            return Collections.unmodifiableList(tokens.subList(start, end));
+        } else if (start == end) {
+            if (allowEmptyResult) {
+                return List.of();
+            } else {
+                throw new JavammLineSyntaxError(format(
+                    "An expression is expected between %s and %s",
+                    firstOpeningBracket, lastClosingBracket), sourceLine);
+            }
+        } else {
+            throw new JavammLineSyntaxError(format(
+                "Expected %s before %s", firstOpeningBracket, lastClosingBracket), sourceLine);
+        }
     }
 }
